allowing label configurations

--- a/src/templates/area-popup-template.html
+++ b/src/templates/area-popup-template.html
@@ -1,7 +1,7 @@
-<h3>${ __('areaMeasurement') }</h3>
+<h3>{{ labels.areaMeasurement }}</h3>
 <p>{{ model.areaDisplay }}</p>
-<p>{{ model.lengthDisplay }} ${ __('perimeter') }</p>
+<p>{{ model.lengthDisplay }} {{ labels.perimeter }}</p>
 <ul class="tasks">
-  <li><a href="#" class="js-zoomto zoomto">${ __('centerOnArea') }</a></li>
-  <li><a href="#" class="js-deletemarkup deletemarkup">${ __('delete') }</a></li>
+  <li><a href="#" class="js-zoomto zoomto">{{ labels.centerOnArea }}</a></li>
+  <li><a href="#" class="js-deletemarkup deletemarkup">{{ labels.delete }}</a></li>
 </ul>
