--- a/src/templates/line-popup-template.html
+++ b/src/templates/line-popup-template.html
@@ -1,6 +1,6 @@
-<h3>${ __('linearMeasurement') }</h3>
+<h3>{{ labels.linearMeasurement }}</h3>
 <p>{{ model.lengthDisplay }}</p>
 <ul class="tasks">
-  <li><a href="#" class="js-zoomto zoomto">${ __('centerOnLine') }</a></li>
-  <li><a href="#" class="js-deletemarkup deletemarkup">${ __('delete') }</a></li>
+  <li><a href="#" class="js-zoomto zoomto">{{ labels.centerOnLine }}</a></li>
+  <li><a href="#" class="js-deletemarkup deletemarkup">{{ labels.delete }}</a></li>
 </ul>
