--- a/src/templates/control-template.html
+++ b/src/templates/control-template.html
@@ -1,18 +1,18 @@
-<a class="{{ model.className }}-toggle js-toggle" href="#" title="${ __('measureDistancesAndAreas') }">${ __('measure') }</a>
+<a class="{{ model.className }}-toggle js-toggle" href="#" title="{{ labels.measureDistancesAndAreas }}">{{ labels.measure }}</a>
 <div class="{{ model.className }}-interaction js-interaction">
   <div class="js-startprompt startprompt">
-    <h3>${ __('measureDistancesAndAreas') }</h3>
+    <h3>{{ labels.measureDistancesAndAreas }}</h3>
     <ul class="tasks">
-      <a href="#" class="js-start start">${ __('createNewMeasurement') }</a>
+      <a href="#" class="js-start start">{{ labels.createNewMeasurement }}</a>
     </ul>
   </div>
   <div class="js-measuringprompt">
-    <h3>${ __('measureDistancesAndAreas') }</h3>
-    <p class="js-starthelp">${ __('startCreating') }</p>
+    <h3>{{ labels.measureDistancesAndAreas }}</h3>
+    <p class="js-starthelp">{{ labels.startCreating }}</p>
     <div class="js-results results"></div>
     <ul class="js-measuretasks tasks">
-      <li><a href="#" class="js-cancel cancel">${ __('cancel') }</a></li>
-      <li><a href="#" class="js-finish finish">${ __('finishMeasurement') }</a></li>
+      <li><a href="#" class="js-cancel cancel">{{ labels.cancel }}</a></li>
+      <li><a href="#" class="js-finish finish">{{ labels.finishMeasurement }}</a></li>
     </ul>
   </div>
 </div>
