--- a/src/templates/point-popup-template.html
+++ b/src/templates/point-popup-template.html
@@ -1,7 +1,7 @@
-<h3>${ __('pointLocation') }</h3>
+<h3>{{ labels.pointLocation }}</h3>
 <p>{{ model.lastCoord.dms.y }} <span class="coorddivider">/</span> {{ model.lastCoord.dms.x }}</p>
 <p>{{ numberFormat(model.lastCoord.dd.y, 6) }} <span class="coorddivider">/</span> {{ numberFormat(model.lastCoord.dd.x, 6) }}</p>
 <ul class="tasks">
-  <li><a href="#" class="js-zoomto zoomto">${ __('centerOnLocation') }</a></li>
-  <li><a href="#" class="js-deletemarkup deletemarkup">${ __('delete') }</a></li>
+  <li><a href="#" class="js-zoomto zoomto">{{ labels.centerOnLocation }}</a></li>
+  <li><a href="#" class="js-deletemarkup deletemarkup">{{ labels.delete }}</a></li>
 </ul>
